--- a/01-beginner/02-local-image-feature/homework.ipynb
+++ b/01-beginner/02-local-image-feature/homework.ipynb
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_path = \"./image/way.png\"\n",
+    "image_path = \"./image/defect.jpg\"\n",
     "\n",
     "import matplotlib.pyplot as plt\t\n",
     "\n",
