feat: add harris code

--- a/01-beginner/01-linear-filter/homework.ipynb
+++ b/01-beginner/01-linear-filter/homework.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(460, 690, 3)\n",
+      "(460, 690)\n"
+     ]
+    }
+   ],
    "source": [
     "#### 前置工作\n",
     "import cv2 as cv\n",
@@ -42,7 +51,11 @@
     "\n",
     "org_image = cv.imread(f\"{image_name}.jpg\", cv.IMREAD_UNCHANGED)\n",
     "org_rgb_image = cv.cvtColor(org_image, cv.COLOR_BGR2RGB)\n",
-    "\n"
+    "\n",
+    "org_gray_image = cv.cvtColor(org_image, cv.COLOR_BGR2GRAY)\n",
+    "\n",
+    "print(org_rgb_image)\n",
+    "print(org_gray_image)"
    ]
   },
   {
